[tool.poetry]
name = "arpu_predict"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
nb_black = "^1.0.7"
scikit-learn = "^0.23.0"
catboost = "^0.23.1"
shap = "^0.35.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.2.1"
nb_black = "^1.0.7"
black = "^19.10b0"
ipywidgets = "^7.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
